# Cauto

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  autoclicker.c  gcc.bat  index.html  main.c  tempCodeRunnerFile.c  test.c
.github/workflows/: jekyll-gh-pages.yml
include/: hwid.c  hwidlist.txt  utils.c  utils.h
old_src/: main.c
old_src/common/: common.h
old_src/player/: player.h
old_src/recorder/: recorder.h
old_src/utils/: crypto.h
src/: main.c  utils.c  utils.h  websocket_example.c  websocket_example.h
src/clickPlayer/: clickPlayer.c  clickPlayer.h
src/clicker/: clicker.c  clicker.h
src/common/: common.h
src/config/: handler.c  handler.h  menu.c
src/include/: common.h  config.h  hwid.c  utils.c  utils.h
src/include/header/: clickPlayer.h  clickRecorder.h  clickSounds.h  handler.h  jitter.h  leftClicker.h  menu.h  utils.h
src/player/: player.c  player.h
src/project/: clickPlayer.c  clickRecorder.c  clickSounds.c  jitter.c  leftClicker.c  utils.c
src/project/clickPlayer/: clickPlayer.h
src/project/clickRecorder/: clickRecorder.h
src/project/leftClicker/: leftClicker.c  leftClicker.h  randomization.c
src/recorder/: recorder.c  recorder.h
src/resources/: include.c
src/utils/: crypto.h  hwid.c  hwid.h  utils.c  utils.h
web/: index.css  index.html  package-lock.json  package.json
web/assets/: assets.css
web/style/: dashboard.css  global.css
